# S2m6_cookiecutt

.dvc/: config
S2m6/: Makefile  README.md  data.dvc  pyproject.toml
S2m6/cookicutt/: __init__.py
S2m6/data/: make_dataset.py
S2m6/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
S2m6/docs/: mkdocs.yaml
S2m6/docs/source/: index.md
S2m6/models/: train_models.py
